dns_validation.log
  File "/home/runner/work/EasyAds/EasyAds/./data/python/dns.py", line 160
    with ThreadPoolExecutor(max_workers=CONFIG['max_workers'])) as executor:
                                                              ^
SyntaxError: unmatched ')'
